--- a/P02-VehiclesAPI/eureka-server/pom.xml
+++ b/P02-VehiclesAPI/eureka-server/pom.xml
@@ -61,5 +61,14 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.4.2</version>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
