--- a/P02-VehiclesAPI/eureka-server/pom.xml
+++ b/P02-VehiclesAPI/eureka-server/pom.xml
@@ -20,14 +20,14 @@
     <properties>
             <java>11</java>
             <spring-cloud.version>Greenwich.SR2</spring-cloud.version>
-    <properties/>
+    </properties>
 
 
     <dependencies>
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
-            <version>2.4.0</version>
+            <version>2.3.1</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
