--- a/P02-VehiclesAPI/pricing-service/src/main/resources/application.properties
+++ b/P02-VehiclesAPI/pricing-service/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+
+#H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+spring.datasource.url=jdbc:h2:nem:car
+
 server.port=8082
 spring.application.name=pricing-service
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
